--- a/NULSCalc/MainWindow.xaml
+++ b/NULSCalc/MainWindow.xaml
@@ -88,7 +88,7 @@
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
                         <Label Foreground="White" Content="代理人佣金比例" Margin="0,0,10,0" Height="25" Width="96"/>
-                        <TextBox Text="0" LostFocus="TextBox_AgentCommission_LostFocus" GotFocus="TextBox_GotFocus" Name="TextBox_AgentCommission" MaxLength="10" Height="23" Background="#17202E" BorderBrush="#658EC7" Width="140" Foreground="White" TextWrapping="NoWrap" VerticalContentAlignment="Center" Padding="5,0,0,0"/>
+                        <TextBox Text="10" LostFocus="TextBox_AgentCommission_LostFocus" GotFocus="TextBox_GotFocus" Name="TextBox_AgentCommission" MaxLength="10" Height="23" Background="#17202E" BorderBrush="#658EC7" Width="140" Foreground="White" TextWrapping="NoWrap" VerticalContentAlignment="Center" Padding="5,0,0,0"/>
                         <Label Foreground="Gray" Content="范围：0-20%" Margin="10,0,0,0"/>
                     </StackPanel>
                     <StackPanel Name="StackPanel_Entrusted" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
@@ -167,16 +167,16 @@
         <DockPanel DockPanel.Dock="Bottom" Height="24" VerticalAlignment="Bottom" Margin="2,0,0,2">
             <WrapPanel DockPanel.Dock="Left" HorizontalAlignment="Left" VerticalAlignment="Center">
                 <Label Foreground="White" BorderBrush="#658EC7" Width="62">区块高度：</Label>
-                <Label Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelBlockHeight" MouseLeftButtonDown="LabelBlockHeight_MouseLeftButtonDown"></Label>
+                <Label ToolTip="最新出块高度" Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelBlockHeight" MouseLeftButtonDown="LabelBlockHeight_MouseLeftButtonDown"></Label>
                 <Label Foreground="White" BorderBrush="#658EC7" Width="62">出块时间：</Label>
-                <Label Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelBlockTime" MouseLeftButtonDown="LabelBlockHeight_MouseLeftButtonDown"></Label>
+                <Label ToolTip="最新出块时间" Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelBlockTime" MouseLeftButtonDown="LabelBlockHeight_MouseLeftButtonDown"></Label>
             </WrapPanel>
             <WrapPanel DockPanel.Dock="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,5,0" >
-                <Label Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelWebSite" MouseLeftButtonDown="LabelWebSite_MouseLeftButtonDown">NULS官网</Label>
-                <Label Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelBinance" MouseLeftButtonDown="LabelBinance_MouseLeftButtonDown">币安</Label>
+                <Label ToolTip="开发者信息" Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelWebSite" MouseLeftButtonDown="LabelWebSite_MouseLeftButtonDown">NULS官网</Label>
+                <Label ToolTip="币安购买NULS链接" Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelBinance" MouseLeftButtonDown="LabelBinance_MouseLeftButtonDown">币安</Label>
                 <Label Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelChineseBBS" MouseLeftButtonDown="LabelChineseBBS_MouseLeftButtonDown">中文交流论坛</Label>
                 <Label Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelTelegram" MouseLeftButtonDown="LabelTelegram_MouseLeftButtonDown">电报群</Label>
-                <Label Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelAbout" MouseLeftButtonDown="LabelAbout_MouseLeftButtonDown">关于</Label>
+                <Label ToolTip="开发者信息" Foreground="White" Cursor="Hand" BorderBrush="#658EC7" Name="LabelAbout" MouseLeftButtonDown="LabelAbout_MouseLeftButtonDown">关于</Label>
             </WrapPanel>
         </DockPanel>
     </DockPanel>
